# cctv_rtsp_hub

./: .dockerignore  .env.template  .gitignore  Dockerfile  docker-compose.dev_my.yml  docker-compose.yml  main.py  mediamtx.yml  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 1b166bd2be53_initial_sqlite_schema.py
app/api/: __init__.py
app/api/routers/: stream.py  video_process.py
app/config/: settings.py
app/crud/: stream.py  video_process.py
app/database/: connection.py
app/models/: stream.py  video_process.py
app/schema/: camera.py  streaming.py  video_process.py
app/services/: minio_service.py  stream_manager.py  video_process_queue.py  video_process_service.py
app/tests/: conftest.py  helpers.py  test_integration_local_storage.py  test_integration_minio_storage.py  test_stream_routes.py  test_video_process_routes.py  test_video_process_routes_local_storage.py  test_video_process_routes_minio_storage.py
app/utils/: logger.py  media.py  security.py
scripts/: dev-compose.sh  prod-compose.sh  test-compose.sh
